syntax="proto3";

option go_package = "./proto";

package demo_service;

service DemoService{
  rpc SayHello(NoParam) returns (HelloResponse);

  rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);

  rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageResponseList);

  rpc SayHelloBiDirectionnalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string message = 1;
}

message NameList{
  repeated string name = 1;
}

message MessageResponseList{
  repeated string message = 1;
}

